--- a/.env.development.sample
+++ b/.env.development.sample
@@ -5,3 +5,4 @@ NEXT_PUBLIC_REPLICHAT_PUSHER_CLUSTER=
 
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
+NEXT_PUBLIC_SUPABASE_DB_CONNECTION_STRING=
